2000-05-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i5

	* ntptrace/ntptrace.c: Protect sys/ioctl.h; grab config.h

	* ntpd/ntp_proto.c (transmit): AUTOKEY and tstamp fixes.
	(clock_update): Check oleap against LEAP_NOTINSYNC
	(peer_clear): Free pubkey when we're done
	Check peer's keynumber against the seq in MODE_BROADCAST.
	Reorder tstamp changes.
	* ntpd/ntp_crypto.c (crypto_recv): Check the packet if we get a
	CRYPTO_RESP and reorder the update of tstamp.
	(crypto_recv): Don't expire the peer until we're thru with it.
	* include/ntp.h: AUTOKEY and pkeyid changes
	From Dave Mills

	* ntpdate/ntpdate.c: Protect sys/ioctl.h

2000-05-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i4

	* include/ntp.h:
	* include/ntp_crypto.h:
	* include/ntpd.h:
	* ntpd/ntp_crypto.c: 
	* ntpd/ntp_proto.c: 
	* ntpd/ntpd.c: 
	* util/ntp_genkeys.c: 
	Dave Mills closed some potential vulnerabilities in the key protocol.

2000-04-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i3

	* ntpd/ntp_proto.c: Just check tstamp, forget about sndauto.seq
	* ntpd/ntp_crypto.c (crypto_recv): Lose inappropriate ntohl()
	conversion on tstamp.
	AUTOKEY if tstamp>0, not !=
	Stash tstamp before we check pcookie.key (several places)
	* ntpd/ntp_control.c (ctl_putpeer): In CP_INITSEQ, check
	recauto.key, not keylist.
	From: Dave Mills

2000-04-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i2

	* ntpq/ntpq.c: PUBKEY stuff
	* ntpd/ntp_proto.c (clock_select): nreach, and better survivor pick.
	* ntpd/ntp_peer.c (newpeer): Better nextdate choice.
	* ntpd/ntp_control.c (ctl_putsys): Buglet in CS_HOSTNAM code.
	From Dave Mills.

2000-04-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build (IAM): Show hostname if we trip a buildkey check.

2000-04-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build: deal with optional 1st argument (SIG), which must match
	the contents of .buildkey
