@@ -15,28 +15,28 @@ $cmd = 'ntpq -c "rv 0 state"';
 
 $| = 1;				# Autoflush output.
 
-print "Waiting for ntpd to synchronize..." if ($opt_v);
+print "Waiting for ntpd to synchronize...  " if ($opt_v);
 for ($i = 0; $i < $opt_n; ++$i) {
     open(Q, $cmd." 2>&1 |") || die "Can't start ntpq: $!";
     while(<Q>) {
       if (/^state=4/) {
-	print " OK!\n" if ($opt_v);
+	print "\bOK!\n" if ($opt_v);
 	exit 0;
       }
 
       if (/request variable was unknown/) {
-	print " Can't tell!\nPerhaps you are running an old version of ntpd.\n" if ($opt_v);
+	print "\bCan't tell!\nPerhaps you are running an old version of ntpd.\n" if ($opt_v);
 	exit $opt_f;
       }
 
       if (/Connection refused/) {
-	print " ntpd is not running!\n" if ($opt_v);
+	print "\bntpd is not running!\n" if ($opt_v);
 	exit 1;
       }
     }
     close(Q);
-    print substr("*+:.", $i % 4, 1) if ($opt_v);
+    print "\b".substr("*+:.", $i % 4, 1) if ($opt_v);
     sleep($opt_s);
 }
-print " No!\nntpd did not synchronize.\n" if ($opt_v);
+print "\bNo!\nntpd did not synchronize.\n" if ($opt_v);
 exit 1;
